@startuml
left to right direction
class users << (T,#ADD1B2) >>{
    id
    --
    email : string
    --
    password : string
    --
    name : string
    --
    created_at : timestamp
    --
    updated_at : timestamp
}

class questions << (T,#ADD1B2) >>{
    id
    --
    description : string
    --
    users_id : int
    --
    created_at : timestamp
    --
    updated_at : timestamp
}
users::id "1" -- "*" questions::users_id

class likes << (T,#ADD1B2) >>{
    id
    --
    users_id : int
    --
    resource : string
    --
    resource_id : int
    --
    created_at : timestamp
}
users::id "1" -- "*" likes::users_id
questions::id "1" -- "*" likes::resource_id

@enduml
